metadata/force-app/main/default/objects/CustomName_FyBrA__c/CustomName_FyBrA__c.object-meta.xml
<CustomObject>
    <description>Description_vocgt</description>
    <label>CustomLabel_RJaJK</label>
    <nameField>
        <label>CustomLabel_RJaJK</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_RJaJKs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>