metadata/force-app/main/default/objects/CustomName_FyBrA__c/fields/CustomField_CwrhN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_CwrhN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvesDH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>