metadata/force-app/main/default/objects/CustomName_FyBrA__c/fields/CustomField_jkYGa__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jkYGa__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGjhEB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>