metadata/force-app/main/default/objects/CustomName_FyBrA__c/fields/CustomField_pjVpS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_pjVpS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzlrBi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>