metadata/force-app/main/default/objects/CustomName_FyBrA__c/fields/CustomField_yeCdc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_yeCdc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldARzgC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>